# gertrude-2026

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
src/gertrude/: __init__.py  agent.py  cli.py  voice.py
src/gertrude/devices/: __init__.py  tv.py
tests/: test_agent.py  test_cli.py
