[project]
name = "gertrude"
version = "0.1.0"
description = "Gertrude CLI tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-tavily>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
]

[project.scripts]
gertrude = "gertrude.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gertrude"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "pre-commit>=3.0.0",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
